user can send messages and recieve messages through ActionCable + added AuthGaurd for routes + styling tweaks + code refactoring

--- a/src/app/room/room.component.scss
+++ b/src/app/room/room.component.scss
@@ -9,6 +9,13 @@
 // }
 .messages-container {
   border: 1px solid #ddd;
+  overflow-y: scroll;
+  padding: 1em;
+  height: 0px;
+
+  p {
+    word-wrap: break-word;
+  }
 }
 
 .container {
