--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -5,21 +5,18 @@
     </h1>
   </header> -->
   <div class='row flex-item-stretch-base flex-container'>
-    <ul class='col-md-4 flex-item-stretch-base'>
-      <li *ngFor="let user of room.users">
-        <p>{{user.nickname}}</p>
-        <p>{{user.email}}</p>
-      </li>
-    </ul>
-    <div class='col-md-8 flex-item-stretch-base flex-container flex-column'>
+    <div class='col-md-12 flex-item-stretch-base flex-container flex-column'>
       
       <div class='messages-container flex-item-stretch-base'>
+        <p *ngFor="let message of room.messages">
+          <strong>{{message[1]}}: </strong>{{message[2]}}
+        </p>
       </div>
 
-      <form (ngSubmit)="onSubmit()" [ngFormOptions]="{ updateOn: 'submit' }" class="message-form flex-item-fixed">
+      <form (ngSubmit)="sendMessage()" [ngFormOptions]="{ updateOn: 'submit' }" class="message-form flex-item-fixed">
   
         <div class='form-group'>
-          <textarea name='message' id='message' class='form-control'></textarea>
+          <textarea [(ngModel)]="messageBody" name='message' id='message' class='form-control'></textarea>
         </div>
   
         <button type='submit' class='btn btn-primary'>Submit</button>
